# local_agent

./: .env.example  .gitignore  Dockerfile.jetson  OCR_Agent.mermaid  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  jetson-deploy.yml
config/: agent_config.yaml  medical_terms.json
scripts/: probe_onvif.py  probe_rtsp.py  test_edge_pipeline_8gb.py  test_gemini_ocr.py  test_glm_ocr.py  test_jabra_mic_stt.py  test_jabra_speaker.py
src/: config_loader.py  main.py
src/cloud_server/: db.py  drug_parser.py  instruction_log.py
src/edge_node/: audio_pipeline.py  stt.py  tts.py  vad.py  wait_ux.py
src/edge_node/capture_mode/: buffer.py  ocr_engine.py  timer.py
src/edge_node/dialogue_manager/: state_machine.py
src/home_environment/: cam.py  speaker.py
src/runtime/: __init__.py  turboquant_runtime.py
systemd/: odiss-agent.service
tests/: test_contract_payloads.py  test_turboquant_runtime_contract.py
