[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "local-agent"
version = "0.1.0"
description = "지능형 복용지도 시스템 - 로컬 에이전트 (OCR 에이전트 + Dialogue Manager)"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "rapidfuzz>=3.6.0",
    "PyYAML>=6.0.1",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
jetson = [
    "pycuda",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
